fix: realizando ajustes no código

--- a/desafios-kotlin/portifolio-projetos/app/src/main/res/layout/activity_main.xml
+++ b/desafios-kotlin/portifolio-projetos/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="user name"
+        android:inputType="numberDecimal"
         android:ems="10"
         android:maxLength="10"
         android:layout_marginTop="16dp"
