refactor: alterando vecto

--- a/desafios-kotlin/to-do_list/app/src/main/res/layout/activity_main.xml
+++ b/desafios-kotlin/to-do_list/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         android:id="@+id/fab_create_task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_more"
+        android:src="@drawable/ic_add"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/gl_end" />
