feat: adicionando o adapter para Recycle view

--- a/desafios-kotlin/to-do_list/app/src/main/res/layout/task_item.xml
+++ b/desafios-kotlin/to-do_list/app/src/main/res/layout/task_item.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/tv_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="15/03/2024 17:05"
