--- a/desafios-kotlin/to-do_list/app/src/main/res/layout/activity_main.xml
+++ b/desafios-kotlin/to-do_list/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,9 @@
         app:layout_constraintStart_toStartOf="@id/gl_start"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <include android:id="@+id/included_empty_state"
+        layout="@layout/empty_state"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_tasks"
         android:layout_width="0dp"
@@ -29,7 +32,8 @@
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         app:layout_constraintBottom_toTopOf="@id/fab_create_task"
         app:layout_constraintStart_toStartOf="@id/gl_start"
-        app:layout_constraintEnd_toEndOf="@id/gl_end"/>
+        app:layout_constraintEnd_toEndOf="@id/gl_end"
+        android:visibility="gone"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_create_task"
